src/objects/VAP_Team__c.object
<CustomObject>
    <description>This object is used to hold the results of VAP parcel and letter units.</description>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>VAP Teams</relationshipLabel>
        <relationshipName>VAP_Teams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MOD_Validated__c</fullName>
        <formula>Case__r.MOD_Validated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MOD Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parcel_Letter__c</fullName>
        <description>This value will be set based on the order that is send out in the response from VAP. It signifies whether the VAP unit is a parcel or a letter handling unit.</description>
        <label>Parcel/Letter</label>
        <picklist>
            <picklistValues>
                <fullName>Letter Distribution Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter Pick-up Place</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parcel Distribution Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parcel Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parcel Pick-up Place</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Route_Description__c</fullName>
        <description>This could be either for letter or parcel. Should populate against the corresponding unit.</description>
        <label>Route Description</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route_no__c</fullName>
        <label>Route no</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAP_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VAP Unit</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>PostNord Org Structure</value>
            </filterItems>
            <filterItems>
                <field>Account.Parent.Name</field>
                <operation>notEqual</operation>
                <value>BLOM</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>VAP Teams</relationshipLabel>
        <relationshipName>VAP_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>VAP Team</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Serial No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VAP Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>